assets/css/style.css
* {
  box-sizing: border-box;
}

:root {
  font-size: 50px;
  --primary: #7674ff;
  --secondary: #ee7ac0;
}

body {
  background-color: aqua;
  margin: 0;
  padding: 0;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

/* hides the classes labeled 'hide' */
.hide {
  display: none;
}

.show {
  display: flex;
}

/*Header Section*/
header {
  font-size: 25%;
  display: flex;
  justify-content: space-between;
  margin: auto;
  width: 90%;
  color: var(--primary);
}

header h1 {
  padding-left: 20px;
  display: inline;
}

/* timer and view high scores */
.timer {
  display: inline;
  text-align: right;
  padding-right: 20px;
}

#high-scores:hover {
  cursor: pointer;
  color: var(--secondary);
}

/* start screen */
#start-quiz-container {
  font-size: 75%;
  display: flex;
  justify-content: center;
  text-align: center;
  padding-right: 20px;
  padding-left: 20px;
}

/* 'incorrect' and 'correct' flex properties */
.banner {
  text-align: center;
  font-style: italic;
  margin: 0 100px;
}

.banner h4 {
  border-top: 2px solid rgba(158, 4, 4, 0.8);
  margin: 0 auto;
  text-align: center;
  padding-top: 5px;
}

/* Start game button */
#start-game {
  font-size: 70%;
  border-radius: 10px;
}

/* question section */
.questions {
  position: relative;
  bottom: 60%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.btn-grid {
  display: grid;
  grid-template-rows: repeat(4, auto);
  grid-gap: 10px;
  margin: 20px 0;
  justify-content: center;
  font-size: 150%;
}

.answerbtn {
  width: auto;
  text-align: left;
  font-size: 40%;
  font-weight: 700;
}

/* final score and initial input screen */
.end h3 {
  margin-left: 800px;
}

.end p {
  text-align: left;
  margin-left: 700px;
  font-size: 80%;
}

.end input {
  outline: thick;
  border-width: 2px;
  padding: 5px;
  width: 35%;
  font-size: 30%;
}

.score {
  position: relative;
  bottom: 60%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#initials {
  font-size: 30%;
}

#submit-score {
  font-size: 40%;
}

/*high score screen*/
ol {
  background-color: var(--primary);
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 10px;
}

/*buttons */
.btn:hover {
  background: var(--secondary);
  cursor: pointer;
}

button {
  font-size: 35%;
  background-color: var(--primary);
  border-radius: 18px;
}

